--- a/WebApplication1/appsettings.json
+++ b/WebApplication1/appsettings.json
@@ -9,5 +9,9 @@
   "ConnectionStrings": {
     "MongoDBConection": "mongodb://localhost:27017",
     "MongoDBName": "TestDB"
+  },
+  "AlertaGram": {
+    "BotToken": "6595345855:AAHiQfCrL_yVy0yrovqTrpS71TI9iR45MqA",
+    "CheckPoint": "-1001993678202"
   }
 }
