--- a/GEH/GEH.csproj
+++ b/GEH/GEH.csproj
@@ -9,6 +9,8 @@
   <ItemGroup>
     <PackageReference Include="AlertaGram" Version="1.0.4" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
+    <PackageReference Include="Microsoft.Extensions.Localization.Abstractions" Version="8.0.4" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="2.2.0" />
   </ItemGroup>
 
 </Project>
